--- a/fitst.html
+++ b/fitst.html
@@ -16,7 +16,7 @@
                 <h1>Sameer Kumar</h1>
                 <p><em>Student of BE.CSE at <strong><a href="https://leetcode.com/shivamjnv01/">Chitkara University</a></a></strong></em> </p>
                 <p>I am an <strong>Android </strong> and <strong>Beigner Web Developer.</strong>
-               currently studing at chitkara university and i have solved upto 300 question at leetcode
+               currently t chitkara university and i have solved upto 300 question at leetcode
            </p>
             </td>
         </tr>
