--- a/fitst.html
+++ b/fitst.html
@@ -13,7 +13,7 @@
                 alt="Not Found">
             </td>
             <td>
-                <h1>Sameer Kumar </h1>
+                <h1>Sameer Kumar sahu</h1>
                 <p><em>Student of BE.CSE at <strong><a href="https://leetcode.com/shivamjnv01/">Chitkara University</a></a></strong></em> </p>
                 <p>I am an <strong>Android </strong> and <strong>Beigner Web Developer.</strong>
                currently t chitkara university and i have solved upto 300 question at leetcode
