--- a/fitst.html
+++ b/fitst.html
@@ -14,7 +14,7 @@
             </td>
             <td>
 
-                <h1>Sameer Kumar sikri</h1>
+                <h1>Aman</h1>
 
                 <p><em>Student of BE.CSE at <strong><a href="https://leetcode.com/shivamjnv01/">Chitkara University</a></a></strong></em> </p>
                 <p>I am an <strong>Android </strong> and <strong>Beigner Web Developer.</strong>
